improved db model

--- a/menu.htm
+++ b/menu.htm
@@ -439,10 +439,10 @@ KOHL, KNÖDEl</span></i></b></p>
 
 <p class=MsoNormal style='margin-bottom:0cm'>&nbsp;</p>
 
-<h1><span class=MsoIntenseReference><span style='color:windowtext;text-transform:
-uppercase'>10<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span></span></span><span
-class=MsoIntenseReference><span style='font-size:14.0pt;font-variant:normal !important;
-color:#FCDC17;text-transform:uppercase'>hOVÌZI GULAŠ                                                                          240,-KÈ<br>
+<h1><span style='color:windowtext'>10<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;
+</span></span><span class=MsoIntenseReference><span style='font-size:14.0pt;
+font-variant:normal !important;color:#FCDC17;text-transform:uppercase'>hOVÌZI
+GULAŠ                                                                          240,-KÈ<br>
 BEEF GOULASH / &#1043;&#1059;&#1051;&#1071;&#1064; &#1048;&#1047;
 &#1043;&#1054;&#1042;&#1071;&#1044;&#1048;&#1053;&#1067; / RINDERGULASCH</span></span></h1>
 
@@ -621,9 +621,11 @@ margin-left:0cm'>RYBA - FISH - &#1056;&#1067;&#1041;&#1040; - FISCHE</p>
 <h1><span style='color:windowtext'>18<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;
 </span></span><span class=MsoIntenseReference><span style='font-size:14.0pt;
 font-variant:normal !important;color:#FCDC17;text-transform:uppercase'>GRILOVANÝ
-LOSOS                                                                    350,-KÈ<br>
-GRILLED SALMON / &#1043;&#1056;&#1048;&#1051;&#1054;&#1042;&#1040;&#1053;&#1053;&#1067;&#1049;
-&#1051;&#1054;&#1057;&#1054;&#1057;&#1068; / GEGRILLTER LACHS</span></span></h1>
+LOSOS S HRANOLKY                                               350,-KÈ<br>
+GRILLED SALMON WITH FRENCH FRIES / &#1051;&#1054;&#1057;&#1054;&#1057;&#1068;
+&#1053;&#1040; &#1043;&#1056;&#1048;&#1051;&#1045; &#1057;
+&#1050;&#1040;&#1056;&#1058;&#1054;&#1064;&#1050;&#1054;&#1049; / GEGRILLTER
+LACHS MIT POMMES FRITES</span></span></h1>
 
 <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
 margin-left:35.4pt'><b><i><span style='font-size:12.0pt;text-transform:uppercase'>Hranolky,
@@ -646,15 +648,16 @@ Frites, SALAT</span></i></b></p>
 <h1><span style='color:windowtext'>19<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;
 </span></span><span class=MsoIntenseReference><span style='font-size:14.0pt;
 font-variant:normal !important;color:#FCDC17;text-transform:uppercase'>GRILOVANÝ
-LOSOS                                                                    350,-KÈ<br>
-GRILLED SALMON /
-&#1043;&#1056;&#1048;&#1051;&#1054;&#1042;&#1040;&#1053;&#1053;&#1067;&#1049;
-&#1051;&#1054;&#1057;&#1054;&#1057;&#1068; / GEGRILLTER LACHS</span></span></h1>
+LOSOS S BRAMBOREM                                           350,-KÈ<br>
+GRILLED SALMON WITH POTATOES / &#1051;&#1054;&#1057;&#1054;&#1057;&#1068;
+&#1053;&#1040; &#1043;&#1056;&#1048;&#1051;&#1045; &#1057;
+&#1050;&#1040;&#1056;&#1058;&#1054;&#1060;&#1045;&#1051;&#1045;&#1052; / GEGRILLTER
+LACHS MIT KARTOFFELN</span></span></h1>
 
 <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
 margin-left:35.4pt'><a name="_Hlk112165189"><b><i><span style='font-size:12.0pt;
 text-transform:uppercase'>GRILOVANÉ BRAMBORY, míchaná zelenina, fazolky, mrkev
-A BROKOLICI</span></i></b></a></p>
+A BROKOLICE</span></i></b></a></p>
 
 <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
 margin-left:35.4pt'><b><i><span style='font-size:12.0pt;text-transform:uppercase'>grilled
@@ -689,7 +692,7 @@ BUTTER</span></span></h1>
 
 <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
 margin-left:35.4pt'><b><i><span style='font-size:12.0pt;text-transform:uppercase'>GRILOVANÉ
-BRAMBORY, míchaná zelenina, fazolky, mrkev A BROKOLICI</span></i></b></p>
+BRAMBORY, míchaná zelenina, fazolky, mrkev A BROKOLICE</span></i></b></p>
 
 <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
 margin-left:35.4pt'><b><i><span style='font-size:12.0pt;text-transform:uppercase'>grilled
