solution for change order or delete food and then refresh order

--- a/menu.htm
+++ b/menu.htm
@@ -287,10 +287,9 @@ Rucolasalat</span></i></b></p>
 </span></span><span class=MsoIntenseReference><span style='font-size:14.0pt;
 font-variant:normal !important;color:#FCDC17;text-transform:uppercase'>LOSOSOVÝ
 TATARÁK S&nbsp;CITRONEM                                             215,-KÈ<br>
-SALMON TARTAR WITH lemon / LACHSTARTAR MIT ZITRONE /
-&#1058;&#1040;&#1056;&#1058;&#1040;&#1056; &#1048;&#1047;
-&#1051;&#1054;&#1057;&#1054;&#1057;&#1071; &#1057;
-&#1051;&#1048;&#1052;&#1054;&#1053;&#1054;&#1052;</span></span></h1>
+SALMON TARTAR WITH lemon / &#1058;&#1040;&#1056;&#1058;&#1040;&#1056;
+&#1048;&#1047; &#1051;&#1054;&#1057;&#1054;&#1057;&#1071; &#1057;
+&#1051;&#1048;&#1052;&#1054;&#1053;&#1054;&#1052; / LACHSTARTAR MIT ZITRONE</span></span></h1>
 
 <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
 margin-left:35.4pt'><b><i><span style='font-size:12.0pt;text-transform:uppercase'>rokula
@@ -621,7 +620,7 @@ margin-left:0cm'>RYBA - FISH - &#1056;&#1067;&#1041;&#1040; - FISCHE</p>
 <h1><span style='color:windowtext'>18<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;
 </span></span><span class=MsoIntenseReference><span style='font-size:14.0pt;
 font-variant:normal !important;color:#FCDC17;text-transform:uppercase'>GRILOVANÝ
-LOSOS S HRANOLKY                                               350,-KÈ<br>
+LOSOS S HRANOLKY                                               350,-KÈ<br>
 GRILLED SALMON WITH FRENCH FRIES / &#1051;&#1054;&#1057;&#1054;&#1057;&#1068;
 &#1053;&#1040; &#1043;&#1056;&#1048;&#1051;&#1045; &#1057;
 &#1050;&#1040;&#1056;&#1058;&#1054;&#1064;&#1050;&#1054;&#1049; / GEGRILLTER
@@ -650,9 +649,8 @@ Frites, SALAT</span></i></b></p>
 font-variant:normal !important;color:#FCDC17;text-transform:uppercase'>GRILOVANÝ
 LOSOS S BRAMBOREM                                           350,-KÈ<br>
 GRILLED SALMON WITH POTATOES / &#1051;&#1054;&#1057;&#1054;&#1057;&#1068;
-&#1053;&#1040; &#1043;&#1056;&#1048;&#1051;&#1045; &#1057;
-&#1050;&#1040;&#1056;&#1058;&#1054;&#1060;&#1045;&#1051;&#1045;&#1052; / GEGRILLTER
-LACHS MIT KARTOFFELN</span></span></h1>
+&#1053;&#1040; &#1043;&#1056;&#1048;&#1051;&#1045; &#1057; &#1050;&#1040;&#1056;&#1058;&#1054;&#1060;&#1045;&#1051;&#1045;&#1052;
+/ GEGRILLTER LACHS MIT KARTOFFELN</span></span></h1>
 
 <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
 margin-left:35.4pt'><a name="_Hlk112165189"><b><i><span style='font-size:12.0pt;
@@ -700,7 +698,8 @@ POTATOES, MIXED VEGETABLES, BEANS, CARROTS AND BROCCOLI</span></i></b></p>
 
 <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
 margin-left:35.4pt'><b><i><span style='font-size:12.0pt;text-transform:uppercase'>&#1050;&#1040;&#1056;&#1058;&#1054;&#1060;&#1045;&#1051;&#1068;
-&#1053;&#1040; &#1043;&#1056;&#1048;&#1051;&#1045;, &#1054;&#1042;&#1054;&#1065;&#1048;,
+&#1053;&#1040; &#1043;&#1056;&#1048;&#1051;&#1045;,
+&#1054;&#1042;&#1054;&#1065;&#1048;,
 &#1060;&#1040;&#1057;&#1054;&#1051;&#1068;,
 &#1052;&#1054;&#1056;&#1050;&#1054;&#1042;&#1068; &#1048;
 &#1041;&#1056;&#1054;&#1050;&#1050;&#1054;&#1051;&#1048;</span></i></b></p>
@@ -794,8 +793,8 @@ vegetable, green beans, carrot,brocolli, curry spices</span></i></b></p>
 <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
 margin-left:35.4pt'><b><i><span style='font-size:12.0pt;text-transform:uppercase'>&#1057;&#1074;&#1077;&#1078;&#1080;&#1077;
 &#1086;&#1074;&#1086;&#1097;&#1080;,
-&#1092;&#1072;&#1089;&#1086;&#1083;&#1100;,
-&#1089;&#1087;&#1077;&#1094;&#1080;&#1080; &#1082;&#1072;&#1088;&#1088;&#1080;</span></i></b></p>
+&#1092;&#1072;&#1089;&#1086;&#1083;&#1100;, &#1089;&#1087;&#1077;&#1094;&#1080;&#1080;
+&#1082;&#1072;&#1088;&#1088;&#1080;</span></i></b></p>
 
 <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
 margin-left:35.4pt'><b><i><span style='font-size:12.0pt;text-transform:uppercase'>Gemischtes
@@ -867,8 +866,7 @@ carrot, broccoli , salad, tomato, hummus</span></i></b></p>
 margin-left:35.4pt'><b><i><span style='font-size:12.0pt;text-transform:uppercase'>&#1052;&#1072;&#1088;&#1082;&#1086;&#1074;&#1082;&#1072;,
 &#1073;&#1088;&#1086;&#1082;&#1082;&#1086;&#1083;&#1080;,
 &#1087;&#1072;&#1087;&#1088;&#1080;&#1082;&#1072;,
-&#1086;&#1083;&#1080;&#1074;&#1082;&#1086;&#1074;&#1086;&#1077;
-&#1084;&#1072;&#1089;&#1083;&#1086;</span></i></b></p>
+&#1086;&#1083;&#1080;&#1074;&#1082;&#1086;&#1074;&#1086;&#1077; &#1084;&#1072;&#1089;&#1083;&#1086;</span></i></b></p>
 
 <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
 margin-left:35.4pt'><b><i><span style='font-size:12.0pt;text-transform:uppercase'>BOHNEN,
@@ -999,7 +997,7 @@ Tomate, Gurke, Zwiebel, grüne Paprika, Oliven</span></i></b></p>
 <h1><span style='color:windowtext'>31<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;
 </span></span><span class=MsoIntenseReference><span style='font-size:14.0pt;
 font-variant:normal !important;color:#FCDC17;text-transform:uppercase'>mix
-salát                                                                                 145,-KÈ<br>
+salát                                                                                145,-KÈ<br>
 MIX SALAD / &#1057;&#1040;&#1051;&#1040;&#1058; &#1052;&#1048;&#1050;&#1057; /
 MIX-SALAT</span></span></h1>
 
@@ -1047,8 +1045,8 @@ border-right:none;padding:10.0pt 0cm 10.0pt 0cm;margin-left:43.2pt;margin-right:
 43.2pt'>
 
 <p class=test style='margin-top:18.0pt;margin-right:0cm;margin-bottom:18.0pt;
-margin-left:0cm'>DEZERTY - DEZERTS - &#1044;&#1045;&#1057;&#1057;&#1045;&#1056;&#1058;&#1067;
-- DESSERTS</p>
+margin-left:0cm'>DEZERTY - DEZERTS -
+&#1044;&#1045;&#1057;&#1057;&#1045;&#1056;&#1058;&#1067; - DESSERTS</p>
 
 </div>
 
